# nix-wire

./: CLAUDE.md  IDEAS.md  README.md  flake.nix
crates/nix-wire/: Cargo.toml
crates/nix-wire-recording/: Cargo.toml
crates/nix-wire-tools/: Cargo.toml
crates/nix-wire-tools/tests/: protocol_integration.rs
crates/nix-wire/src/: lib.rs  ops.rs  protocol.rs  wire.rs  wire_async.rs
crates/nix-wire/src/script/: decompile.rs  expect.rs  format.rs  mod.rs  parse.rs  serialize.rs
docs/: getting-started.md  nwscript-format.md  recording-format.md  recording-sessions.md  wire-protocol.md
examples/: add-text.nwscript  nix-develop-session.nwscript  path-validation.nwscript  store-query.nwscript
nix/: package.nix
