[package]
name = "nix-wire"
version = "0.1.0"
edition = "2021"
description = "Nix daemon wire protocol types and async parser"
license = "MIT"
repository = "https://github.com/zimbatm/nix-wire"

[dependencies]
anyhow = "1"
regex = "1"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
